// Copyright (c) 2016-present, Facebook, Inc.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree. An additional grant
// of patent rights can be found in the PATENTS file in the same directory.

syntax = "proto3";

package magma.orc8r;
option go_package = "magma/orc8r/lib/go/protos";

message Void {
}

// --------------------------------------------------------------------------
// NetworkID uniquely identifies the network
// --------------------------------------------------------------------------
message NetworkID {
  string id = 1;
}

// --------------------------------------------------------------------------
// IDList is a generic definition of an array of IDs (network, gateway, etc.)
// --------------------------------------------------------------------------
message IDList {
  repeated string ids = 1;
}

// --------------------------------------------------------------------------
// Logging levels
// --------------------------------------------------------------------------
enum LogLevel {
  DEBUG = 0;
  INFO = 1;
  WARNING = 2;
  ERROR = 3;
  FATAL = 4;
}
